exports[`Alert should handle 403 error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    ⛔️
  </span>
  You don’t have permission to access this Spreadsheet.
</p>
`;

exports[`Alert should handle 404 error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    ❓
  </span>
  Spreadsheet not found.
</p>
`;

exports[`Alert should handle default error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    💀
  </span>
  Doh, I couldn’t load the data.
</p>
`;
